app/static/style.css
body {
    font-family: 'Roboto', sans-serif;
}

.nav {
    display: flex;
    height: 4rem;
    gap: 4rem;
    padding: 0 2rem;
}

input {
    margin-top: 0.5rem;
    padding: 1rem;
    width: 300px;
    font-size: medium;
}

button {
    padding: 0.5rem 1.5rem;
}

.container {
    padding: 2rem;
    margin: 0 auto;
}

.message {
    border: 1px solid;
    padding: 0 5rem;
    border-radius: 5px;
    margin: 0 2rem;
    margin-top: 2rem;
    background-color: ghostwhite;
}

.error {
    color: crimson;
}

.success {
    color: green;
}

a {
    font-size:large;
    margin-left: 1rem;
    margin-bottom: 0.5rem;
    text-decoration: none;
    color: rgb(57, 118, 231);
}

.field {
    display: flex;
    flex-direction: column;
}

.employee-form {
    display: flex;
    gap: 1rem;
}

table {
    margin-top: 2rem;
}

tr:nth-child(1) {
    background-color: ghostwhite;
    border-top: 1px solid rgba(0, 0, 0, 0.078);
}

td, th {
    border-bottom: 1px solid rgba(0, 0, 0, 0.078);
    width: 200px;
    padding: 0.5rem 1rem;
}

.page-header {
    display: flex;
    align-items: center;
    gap: 25rem;
    height: 4rem;
}

